(4.2.5p186) 2009/07/08 Released by Harlan Stenn <stenn@ntp.org>
* ntp_proto.c cleanup from Dave Mills.
(4.2.5p185) 2009/07/01 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* [Bug 1234] convert NMEA driver to use common PPSAPI code.
* timepps-Solaris.h pps_handle_t changed from pointer to scalar
* Spectracom refclock added to Windows port of ntpd
* [Bug 1236] Declaration order fixed.
* Bracket private ONCORE debug statements with #if 0 rather than #ifdef DEBUG
* Delete ONCORE debug statement that is now handled elsewhere.
(4.2.5p184) 2009/06/24 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1233] atom refclock fudge time1 sign flipped in 4.2.5p164.
(4.2.5p183) 2009/06/23 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1196] setsockopt(SO_EXCLUSIVEADDRUSE) can fail on Windows 2000
  and earlier with WSAINVAL, do not log a complaint in that case.
* [Bug 1210] ONCORE driver terminates ntpd without logging a reason.
* [Bug 1218] Correct comment in refclock_oncore on /etc/ntp.oncore*
  configuration file search order.
* Change ONCORE driver to log using msyslog as well as to any
  clockstats file.
* [Bug 1231] ntpsnmpd build fails after sockaddr union changes.
(4.2.5p182) 2009/06/18 Released by Harlan Stenn <stenn@ntp.org>
* Add missing header dependencies to the ntpdc layout verification.
* prefer.html updates from Dave Mills.
* [Bug 1205] Add ntpd --usepcc and --pccfreq options on Windows
* [Bug 1215] unpeer by association ID
* [Bug 1225] Broadcast address miscalculated on Windows 4.2.5p180
* [Bug 1229] autokey segfaults in cert_install().
* Use a union for structs sockaddr, sockaddr_storage, sockaddr_in, and
  sockaddr_in6 to remove casts and enable type checking.  Collapse
  some previously separate IPv4/IPv6 paths into a single codepath.
(4.2.5p181) 2009/06/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1206] Required compiler changes for Windows
* [Bug 1084] PPSAPI for ntpd on Windows with DLL backends