@@ -1,3 +1,4 @@
+* [Bug 1244] NTP_INSIST(fd != maxactivefd) failure in intres child
 (4.2.5p186) 2009/07/08 Released by Harlan Stenn <stenn@ntp.org>
 * ntp_proto.c cleanup from Dave Mills.
 (4.2.5p185) 2009/07/01 Released by Harlan Stenn <stenn@ntp.org>
